Fixed output box not wrapping long text

--- a/.example/typescript_webpack/src/index.scss
+++ b/.example/typescript_webpack/src/index.scss
@@ -50,6 +50,7 @@
     #output {
       border: 1px solid #ccc;
       padding: 8px;
+      white-space: pre-wrap;
     }
   }
 }
